--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <h1>Zyad Abdullh</h1>
+       <img src="./assets/Images/Portfolio-Pic.jpeg" height="200" />
     <br />
     <h2>Professional Profile</h2>
 
@@ -235,5 +236,13 @@
     </ul>
     <br />
     <hr />
+     <h2>You Want To Get a Hold Of Me</h2>
+
+    <a href="contact.html">Click here</a>
+    <br />
+    <hr />
+    <footer>
+      © Zyad Abdullh. All rights reserved.
+    </footer>
   </body>
 </html>
