--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,16 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<ul>
+  <li>Tel: +1(416)795-9597</li>
+  <li>Email: Zyad.Abdullh.al@gmail.com</li>
+</ul>
+
+<h3>Address:</h3>
+<p></p>
+<ul>
+  <li>
+    Residence : 1210 - 77 Howard ST
+  </li>
+  <li>City : Toronto</li>
+  <li>Province ; Ontario</li>
+  <li>Country : Canada</li>
+</ul>
